Version 5.3.0.5
Added box-cas!

Version 5.3.0.4
racket/draw: added make-color, make-brush, make-pen

Version 5.3.0.3
Added module-path-index-submodule
Changed module-path-index-join to support a submodule argument

Version 5.3.0.1
ffi/unsafe: integer-type bounds consistently checked

Version 5.2.900.1
Add submodules, including module*, module-compiled-submodules
Changed module-path? to report #t for paths
Changed resolved module paths to allow lists that represent
 submodule paths; see the revised contract on resolve-module-path-name
Changed the module name resolver protocol so that a module declaration
 always triggers a notifification
Changed the load/use-compiled handler protocol to subpport a submodule
 module
compiler/zo-struct: added pre-submodules and post-submodules field to
 mod, changed name field to allow a list of symbols

Version 5.2.1.7
racket/sandbox: added sandbox-gui-enabled and sandbox-make-namespace;
 deprecated gui?, which is no long used internally; changed the default
 for sandbox-namespace-specs to sandbox-make-namespsace

Version 5.2.1.6
Added prop:cpointer
Fixed handle-evt to disallow a handle-evt
mysterx: removed ActiveX support plus com-add-ref and 
 com-ref-count
racket/draw: treat a face as a Pango font description
 only when it contains a comma
racket/draw: add record-dc%

Version 5.2.1.5
Added racket/future to re-exports of racket
Changed current-write-relative-directory to support a pair
 of paths: relative-to and base

Version 5.2.1.4
Changed ffi-lib to open libraries in local mode by default

Version 5.2.1, January 2012
Changed I/O scheduling to use epoll()/kqueue() when available
Cross-module inline trivial functions, plus map, for-each,
 andmap, and ormap; 'compiler-hint:cross-module-inline hint
Intern numbers, characters, strings, byte strings, and regexps in
 read and datum->syntax
Added datum-intern-literal
Regexps are `equal?' when they have the same source [byte] string
 and mode
Added pseudo-random-generator-vector?