@@ -1,5 +1,8 @@
 Version 5.3.0.5
 Added box-cas!
+racket/gui: changed open-output-text-editor to by default deliver 
+ content via the current eventspace's handler thread; also
+ added an #:eventspace optional argument
 
 Version 5.3.0.4
 racket/draw: added make-color, make-brush, make-pen
